switch version swagger
